--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                                     Ayu
                                 </div>
                                 <div class="project-name">
-                                    Educating kids @World Environment Day
+                                    Protesting for Animal Rights 
                                 </div>
                             </div>
                         </div>
