--- a/index.html
+++ b/index.html
@@ -182,10 +182,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Ayu
+                                    Shashakt Team
                                 </div>
                                 <div class="project-name">
-                                    Protesting for Animal Rights 
+                                    Protesting for Animal Welfare 
                                 </div>
                             </div>
                         </div>
